--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-uglify": "~0.2.7",
     "assemble": "~0.4.33",
     "pretty": "~0.1.1",
-    "grunt-livereload": "~0.1.3"
+    "grunt-livereload": "~0.1.3",
+    "grunt-favicons": "~0.6.0"
   }
 }
